# tourhythm-ai

./: .env.example  Dockerfile  Makefile  alembic.ini  compose.yaml  database_schema.md  lefthook.yml  main.py  pyproject.toml  requirements.txt
doc/: database_schema.md
scripts/: migrate.sh
src/: main.py
src/ai/: .importlinter  __init__.py
src/ai/agent/: __init__.py
src/ai/graph/: __init__.py  multi_agent_graph.py  self_improve_graph.py  states.py  tourist_agent_graph.py
src/ai/node/: __init__.py  states.py
src/ai/service/: __init__.py
src/app/: main.py
src/app/schemas/: __init__.py
src/app/service/: __init__.py  ai_chat_service.py  optimize.py  save_chat_data.py
src/config/: __init__.py  settings.py
src/infra/database/: __init__.py  _database.py
src/log/: __init__.py  agent_graph_logger.py
src/optimizer/: __init__.py  _celery.py  main.py
test/: test_general_node.py  test_task_agent.py  test_task_node.py
test/agent/: test_base_agent.py  test_general_agent.py  test_schedule_agent.py  test_supervisor_agent.py
test/ai/agent/: test_declarative_evaluation_agent.py  test_declarative_general_agent.py  test_declarative_schedule_agent.py  test_declarative_task_agent.py  test_declarative_trip_agent.py  test_evaluation_agent.py  test_task_agent.py  test_trip_agent.py
test/ai/graph/: test_multi_agent_graph.py  test_self_improve_graph.py  test_tourist_agent_graph.py
test/ai/node/: test_declarative_general_node.py  test_declarative_task_node.py  (+7 more)
test/graph/: test_multi_agent_graph.py
test/node/: test_general_node.py  test_supervisor_node.py  test_task_node.py
(+74 files in other folders)
