[project]
name = "tourhysm-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "celery>=5.6.0",
    "dspy>=3.0.4",
    "fastapi>=0.124.2",
    "import-linter>=2.7",
    "langchain>=1.1.2",
    "langchain-core>=1.1.1",
    "langchain-openai>=1.1.0",
    "langchain-tavily>=0.2.13",
    "langgraph>=1.0.4",
    "openai>=2.9.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]
